<package format="2">
  <name>motion_state_rviz_plugin_ros</name>
  <version>1.0.0</version>
  <description>
     MotionState plugin for RViz.
  </description>
  <license>BSD</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <build_depend>qtbase5-dev</build_depend>
  <depend>rviz</depend>

  <depend>automated_driving_msgs</depend>
  <depend>simulation_only_msgs</depend>

  <depend>util_automated_driving_msgs</depend>
  <depend>util_rviz</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
